# Slashy-Goose

./: CSEvents.py  LICENSE  Sentinelstreamcollection.py  VCTscoreboarding.py  csgoevent.txt  csgoscoreboarding.py  csmap.py  dotaevent.txt  dotainfo.txt  dotascoreboarding.py  dotatournament.txt  dropboxUploader.py  dtStreams.py  filetosend.txt  gamecheckers.py  giveawaychanneldocument.txt  giveawayroledocument.txt  lastcs.py  lastgames.py  lastvalo.py  ldnVCTscoreboarding.py  main.py  playerstats.py  pyproject.toml  reminders.txt  replit.nix  requirements.txt  scoreboard2.csv  scoreboard3.csv  scoreboard5.csv  scoreboard6.csv  scoreboard8.csv  scoreboard9.csv  sentineldropboxUploader.py  sentinelgamecheckers.py  sentinellastvalo.py  sentinelsVTstreams.py  sentinelsvaloscoreboarding.py  sentinelvaloevents.py  sentinelvalomaps.py  (+17 more)
