[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
bs4 = "^0.0.1"
python-dotenv = "^0.20.0"
selenium = "^4.4.0"
python-dateutil = "^2.8.2"
dropbox = "^11.33.0"
googletrans = "^3.0.0"
beautifultable = "^1.1.0"
APScheduler = "^3.9.1"




[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"